--- a/welcome.html
+++ b/welcome.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
     <head>
-        <title>"Hello World"</title>
+        <title>"Welcome to Veridian Dynamics!"</title>
         <meta charset="utf-8">
     </head>
-    <body>
-    Hello World
 
+    <body>
+
+        <h1>Welcome to Veridian Dynamics!</h1>
+    <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong>technology</strong>.</p>
+
+
+        <hr>
+        <h2>Core Values</h2>
+        <ul>
+            <li>Competence</li>
+            <li>Involvment</li>
+            <li>Technology</li>
+
+        </ul>
+
+            <h2>Our Process</h2>
+        <ol>
+            <li>Plan</li>
+            <li>Evaluate</li>
+            <li>Implement</li>
+
+        </ol>
+
+            <h2>20/20 Vision</h2>
+        <ul>
+            <li>Become #1 in Technology</li>
+            <li>Increase Success by 20%</li>
+            <li>Increase Business by 30%</li>
+        </ul>
+
+        <hr>
+
+        <h2>Company Vision</h2>
+        <img src=""
+
+
+    <h2>Our Product</h2>
+
+    <table>
+        <tr>
+            <th>Plan</th>
+            <th>Price</th>
+            <th>Features</th>
+        </tr>
+        <tr>
+            <td>Starter</td>
+            <td>$99</td>
+            <td>Base Technology</td>
+        </tr>
+
+        <tr>
+            <td>Advanced</td>
+            <td>$199</td>
+            <td>Additional Features</td>
+        </tr>
+
+        <tr>
+            <td>Premium</td>
+            <td>$499</td>
+            <td>Unlimited Support</td>
+        </tr>
+
+    </table>
+        <h6><em>All products come with our quality guarantee &trade;</em></h6>
+            <div>
+                <a href="#top">Go to the top of the page</a>
+            </div>
     </body>
 </html>
