--- a/welcome.html
+++ b/welcome.html
@@ -36,8 +36,15 @@
 
         <hr>
 
+
         <h2>Company Vision</h2>
-        <img src=""
+        <div><img src="img/laptop.jpeg">
+            <img src="img/sunset.jpeg"></div>
+        <img src="img/man_sunset.jpg">
+        <img src="img/conference.jpeg">
+
+
+
 
 
     <h2>Our Product</h2>
