--- a/github.html
+++ b/github.html
@@ -7,7 +7,7 @@
     <body>
     <div>
         <header>
-           <img src="img/github-logo.png" alt="cat">
+           <img src="img/github_s.png" alt="cat">
             <nav>
             <ul>
             <li>Pull Requests</li>
@@ -35,41 +35,67 @@
     <div>
     <h5>Codeup's dev team</h5>
         </div>
+
+
+
+             <a href="">
+
         <div>
-        <img src="http://placeholder.pics/svg/48" alt="spaceship">
-            <p>Kent Beck</p>
-            <p>Kent Beck</p>
+
+                    <img src="http://placeholder.pics/svg/48" alt="spaceship">
+                     <h3>Kent Beck</h3>
+                     <p>Kent Beck</p>
+
+                 <ul>
+                     <li>Member</li>
+                     <li>1 team</li>
+                 </ul>
 
         </div>
         <div>
         <img src="http://placeholder.pics/svg/48" alt="spaceship">
+            <h3>Codeeup Instruction Staff</h3>
+            <p>KCodeupInstructors</p>
+
+            <ul>
+                <li>Member</li>
+                <li>1 team</li>
+            </ul>
+
+
         </div>
 
         <div>
             <img src="http://placeholder.pics/svg/48" alt="blocks">
-        </div>
+            <h3></h3>
+            <p>Martin Fowler</p>
 
+            <ul>
+                <li>Member</li>
+                <li>0 team</li>
+            </ul>
+
+
+        </div>
 
     <footer>
         <p>Copyright 2017</p>
         <ul>
-            <ul></ul>
-            <ul></ul>
-            <ul></ul>
-            <ul></ul>
-            <ul></ul>
-            
+            <li><a href="">Terms</a></li>
+            <li><a href="">Privacy</a></li>
+            <li><a href="">Security</li>
+            <li><a href="">Status</li>
+            <li><a href="">Help</li>
+            <li><a href="">Contact GitHub</li>
+            <li><a href="">API</li>
+            <li><a href="">Training</li>
+            <li><a href="">Shop</li>
+            <li><a href="">Blog</li>
+            <li><a href="">About</li>
+
         </ul>
+
     </footer>
-
-
-
-
-
-
-
-
-
 
     </body>
 </html>
