--- a/welcome.html
+++ b/welcome.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <head>
         <title>"Welcome to Veridian Dynamics!"</title>
+    <link rel="stylesheet" href="css/style.css">
         <meta charset="utf-8">
     </head>
 
