--- a/welcome.html
+++ b/welcome.html
@@ -39,7 +39,7 @@
 
 
         <h2>Company Vision</h2>
-        <div><img src="img/laptop.jpeg">
+        <div><img src="img/laptopO.jpeg">
             <img src="img/sunset.jpeg"></div>
         <img src="img/man_sunset.jpg">
         <img src="img/conference.jpeg">
@@ -75,7 +75,7 @@
         </tr>
 
     </table>
-        <h6><em>All products come with our quality guarantee &trade;</em></h6>
+        <p><h6><em>All products come with our quality guarantee &trade;</em></h6></p>
             <div>
                 <a href="#top">Go to the top of the page</a>
             </div>
