--- a/github.html
+++ b/github.html
@@ -5,29 +5,35 @@
          <meta charset="utf-8">
     </head>
     <body>
-    <div>
         <header>
-           <img src="img/github_s.png" alt="cat">
             <nav>
-            <ul>
-            <li>Pull Requests</li>
-            <li>Issues</li>
-            <li>Marketplace</li>
-            <li>Explore</li>
+                <ul>
+                <li>
+                <a href="">
+
+                <img src="img/github_s.png" alt="cat">
+                </a>
+                </li>
+
+                    <li> <a href="'">Pull Requests</a></li>
+                    <li> <a href="'">Issues</a></li>
+                    <li> <a href="'">Marketplace</a></li>
+                    <li> <a href="'">Explore</a></li>
             </ul>
             </nav>
-    </div>
-    <br>
+
+    <div>
     <img src="img/codeup-arrow.png">
-    <h5>Codeup</h5>
+    <h1>Codeup</h1>
+    </div>
 
     <nav>
         <ul>
-            <li>Repositories 39</li>
-            <li>People 15</li>
-            <li>Team 7</li>
-            <li>Projects 0</li>
-            <li>Settings</li>
+            <li><a href="">Repositories <span> 39</span></a></li>
+            <li><a href="">People <span> 15</span></a></li>
+            <li><a href="">Team <span> 7</span></a></li>
+            <li><a href="">Projects <span> 0</span></a></li>
+            <li><a href="">Settings</a></li>
         </ul>
     </nav>
 
@@ -36,11 +42,8 @@
     <h5>Codeup's dev team</h5>
         </div>
 
-
-
-             <a href="">
-
         <div>
+             <a href="">
 
                     <img src="http://placeholder.pics/svg/48" alt="spaceship">
                      <h3>Kent Beck</h3>
@@ -54,8 +57,8 @@
         </div>
         <div>
         <img src="http://placeholder.pics/svg/48" alt="spaceship">
-            <h3>Codeeup Instruction Staff</h3>
-            <p>KCodeupInstructors</p>
+            <h3>Codeup Instruction Staff</h3>
+            <p>CodeupInstructors</p>
 
             <ul>
                 <li>Member</li>
@@ -79,7 +82,7 @@
         </div>
 
     <footer>
-        <p>Copyright 2017</p>
+        &copy; 2018 Github, Inc.
         <ul>
             <li><a href="">Terms</a></li>
             <li><a href="">Privacy</a></li>
