--- a/media-queries.html
+++ b/media-queries.html
@@ -21,8 +21,7 @@
         </ul>
     </nav>
     <div class="header-img">
-
-        <img src="http://via.placeholder.com/339x224" alt="">
+        <img src="http://lorempixel.com/g/900/400" alt="">
     </div>
     <section id="main" class="main">
         <h2>Main Section</h2>
