adjusted width of columns

--- a/grid-layout.html
+++ b/grid-layout.html
@@ -33,14 +33,15 @@
     <div class="column one-sixth">1/6</div>
 </div>
 <div>
-    <div class="column one-eight">1/8</div>
-    <div class="column one-eight">1/8</div>
-    <div class="column one-eight">1/8</div>
-    <div class="column one-eight">1/8</div>
-    <div class="column one-eight">1/8</div>
-    <div class="column one-eight">1/8</div>
-    <div class="column one-eight">1/8</div>
-    <div class="column one-eight">1/8</div>
+    <div class="row">
+    <div class="column one-eighth">1/8</div>
+    <div class="column one-eighth">1/8</div>
+    <div class="column one-eighth">1/8</div>
+    <div class="column one-eighth">1/8</div>
+    <div class="column one-eighth">1/8</div>
+    <div class="column one-eighth">1/8</div>
+    <div class="column one-eighth">1/8</div>
+    <div class="column one-eighth">1/8</div>
 </div>
 </div>
 </body>
