--- a/media-queries-ref.html
+++ b/media-queries-ref.html
@@ -5,41 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Media Queries</title>
     <link rel="stylesheet" href="css/grid-layout-ref.css">
+    <link rel="stylesheet" href="css/grid-layout.css">
 
 </head>
 <body>
+<main class="container">
+
 <div class="alert-info hidden-on-desktop">
+    <div class="a href">
     <a href="#main">Skip to main content</a>
 </div>
-<div class="row">
+
     <div class ="column" style="background-color: #75aaff;">
-    <h1>Company</h1></div>
+     <div class="header">
+         <h1>Company</h1></div></div>
 <nav>
     <div class="row">
-        <div class ="column" style="background-color: #75aaff;">
+        <div class ="column" style="background-color: #a4fbae;">
+        <div class="col-3 nav-links">
     <ul class="nav-links">
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Work</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
+        </div>
 </nav>
 <div class="header-img">
-    <img src="http://lorempixel.com/g/900/400" alt="">
+   <!-- <img class="full" src="http://lorempixel.com/g/900/400" alt="">-->
 </div>
+    <div class="row">
 <section id="main" class="main">
-    <h2>Main Section</h2>
+    <div class ="column" style="background-color: coral;">
+    <div class="header">
+        <h2>Main Section</h2></div>
     <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
+    </div>
 </section>
 <section class="sub-section">
-    <h2>Sub-section</h2>
+    <div class ="column" style="background-color: yellow;">
+        <div class="sub-section">
+            <h2>Sub-section</h2></div>
     <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
-</section>
+</section></div>
+</main>
+
 <footer>
+    <footer class="container">
     <p>(c) 2017 All rights reserved</p>
     <div id="social-media-links">
 
     </div>
 </footer>
+</div>
+</div>
+
 </body>
 </html>
