--- a/dom-query-ex2.html
+++ b/dom-query-ex2.html
@@ -38,24 +38,28 @@
         var subHeader = document.getElementById("sub-header");
 
         // TODO: Set the text color of subHeader to blue
-            subHeader.style.color = "blue";
+        subHeader.style.color = "blue";
+
         // TODO: Uncomment the next line and get all list items
         var listItems = document.getElementsByTagName("li");
-            console.log(listItems);
 
         // TODO: Set text color on every other list item to grey
-            for (var i = 0; i < listItems.length; i+=2) {
-                listItems[i].style.color = "grey";
-            }
+        for (var i = 0; i < listItems.length; i += 2) {
+            listItems[i].style.color = "grey";
+        }
+        //another option for the above exercise:
+        //for (var i = 0; i < listItems.length; i += 1) {
+    //     if (listItems[i].getAttribute("data-dbid") === "1") {
+    //         listItems[i].style.color = "blue";
+    //     }
+    // }
         // TODO: Set text color of li with dbid = 1 to blue
-            listItems[0].style.color = "blue";
+        listItems[0].style.color = "blue";
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
         var subParagraphs = document.getElementsByClassName("sub-paragraph");
-            console.log(subParagraphs);
-
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs[0].innerHTML = "Mission Accomplished!"
+        subParagraphs[0].innerHTML ="<strong>Mission Accomplished!</strong>"
 
     })();
 </script>
