set up exerices

--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+
 <h1 id="main-header">Hello World!</h1>
 <ul>
     <li data-dbid="1">Item 1</li>
@@ -25,37 +26,68 @@
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
 
+    <button id="btn1">Click Me It's Cooool!</button>
+    <button id="btn2">Make it Blue!!</button>
+    <button id="btn3">Grey Please!</button>
+    <button id="btn4">What Paragraph??</button>
+    <button id="btn5">Golden Rod the page!</button>
+
 <script>
+
+
     (function() {
         "use strict";
-        // TODO: Uncomment next line and get the main header element by id
-        var mainHeader = document.getElementById("main-header");
 
-        // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-        mainHeader.innerHTML = "JavaScript is Cool"
 
-        // TODO: Uncomment the next line and get the sub header element by id
-        var subHeader = document.getElementById("sub-header");
+        document.getElementById("btn1").addEventListener("click", function() {
+            // TODO: Uncomment next line and get the main header element by id
+            var mainHeader = document.getElementById("main-header");
+            // TODO: Set inner html of mainHeader to "JavaScript is Cool"
+            mainHeader.innerHTML = "JavaScript is Cool"
+            console.log("btn1 clicked");
+        })
 
-        // TODO: Set the text color of subHeader to blue
+        document.getElementById("btn2").addEventListener("click", function() {
+            // TODO: Uncomment the next line and get the sub header element by id
+            var subHeader = document.getElementById("sub-header");
+
+            // TODO: Set the text color of subHeader to blue
             subHeader.style.color = "blue";
-        // TODO: Uncomment the next line and get all list items
-        var listItems = document.getElementsByTagName("li");
+            console.log("btn2 clicked");
+        })
+        document.getElementById("btn3").addEventListener("click", function() {
+            // TODO: Uncomment the next line and get all list items
+            var listItems = document.getElementsByTagName("li");
             console.log(listItems);
 
-        // TODO: Set text color on every other list item to grey
+            // TODO: Set text color on every other list item to grey
             for (var i = 0; i < listItems.length; i+=2) {
                 listItems[i].style.color = "grey";
             }
-        // TODO: Set text color of li with dbid = 1 to blue
+            // TODO: Set text color of li with dbid = 1 to blue
             listItems[0].style.color = "blue";
-
-        // TODO: Uncomment the next line and get all elements with class name sub-paragraph
-        var subParagraphs = document.getElementsByClassName("sub-paragraph");
+            console.log("btn3 clicked");
+        })
+        document.getElementById("btn4").addEventListener("click", function() {
+            // TODO: Uncomment the next line and get all elements with class name sub-paragraph
+            var subParagraphs = document.getElementsByClassName("sub-paragraph");
             console.log(subParagraphs);
 
-        // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs[0].innerHTML = "Mission Accomplished!"
+            // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
+            //
+            // var subParagraphs = document.getElementsByClassName("sub-paragraph");
+            // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
+            subParagraphs[0].innerHTML ="<strong>Mission Accomplished!</strong>"
+            console.log("btn4 clicked");
+
+            document.getElementById("btn5").addEventListener("click", function(){
+                document.body.style.backgroundColor = "red";
+                console.log("btn5 clicked");
+         })
+
+
+        })
+
 
     })();
 </script>
