--- a/simple_function_drills_js.html
+++ b/simple_function_drills_js.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <script src="js/simple_function_drills.js"></script>
+    <input type=""text" id="playInput">
+    <button id="playButton">Play</button>
+    <div
+
+
 
 </body>
 </html>
