--- a/konami.html
+++ b/konami.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 <h1>Konami Code</h1>
+<!--used part of Konami code from https://stackoverflow.com/questions/31626852/how-to-add-konami-code-in-a-website-based-on-html-->
 <script src="js/jquery-2.2.4.js"></script>
 <script>
     "use strict";
