--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -7,6 +7,17 @@
 
 </head>
 <body>
+<div id="newsletter">
+
+    <h1>Would you like to sign up for our newsletter?</h1>
+    <span>X</span>
+</div>
+
+
+    <h2 id="register">Please register for the site</h2>
+
+
+
 <h1>National Parks FAQs</h1>
 <dl>
     <dt>How do I obtain a park entrance pass?</dt>
