--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <title>Blog</title>
 </head>
-<body>
+<body class="bg-primary">
 <tr>
+
+
   <h1>My Blog</h1>
         <div id="posts">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+            <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 <script>
 
@@ -44,111 +50,16 @@
 </script>
 
 
-            <!--<th>Title</th>-->
-            <!--<th>Content</th>-->
-            <!--<th>Categories</th>-->
-            <!--<th>Date</th>-->
-<!--</tr>-->
-<!--</td>-->
 
 
-<!--</div>-->
-
-
-
-<!--<script>-->
-    <!--(function() {-->
-        <!--"use strict";-->
-
-
-        <!--$.ajax({-->
-            <!--url: "./data/blog.json",-->
-            <!--type: "GET",-->
-
-        <!--}).done(function(data) {-->
-            <!--// do something with the data-->
-            <!--var table;//to hold each object;-->
-            <!--data.forEach(function(object) {-->
-                <!--table += "th scope = 'row'><tr><td>" + object.title + '</td><td>'+ object.content + '</td><td>' + object.categories + '</td><td>'-->
-                    <!--+ object.date + '</td></tr></th>';//create array object by heading title in inventory.json-->
-                <!--console.log(object);-->
-                <!--$('#insertPosts').html(table);// prints to browser in table body-->
-
-            <!--})-->
-        <!--});-->
-
-
-        <!--$('#refresh-btn').click(function(){-->
-            <!--location.reload();-->
-        <!--})-->
-
-
-        <!--})();-->
-
-</script>
-
-
-
-// <!--<script>-->
-//     <!--(function() {-->
-//         <!--"use strict";-->
-// <!--// This is an ajax GET request for /data/blog.json-->
-//         <!--$.ajax('./data/blog.json').done(function (data) {-->
-// <!--// which returns an array of objects that I named "data"-->
-//             <!--appendData(data)-->
-// <!--// this console logs the "error" status if something goes wrong-->
-//         <!--}).fail(function (JSONObject, status) {-->
-//             <!--console.log(status);-->
-//         <!--});-->
-//
-//
-// <!--// This function takes the data from inventory.json and appends it to the products table-->
-//         <!--function appendData(data) {-->
-//             <!--var inventory = " "-->
-// <!--// For each item in this data array, I created a line of html called "inventory" and then append that html into the "products" table-->
-//             <!--data.forEach(function(posts){-->
-//                 <!--inventory += "<tr>"-->
-//                 <!--inventory += "<td>" + posts.title + "</td>"-->
-//                 <!--inventory += "<td>" + posts.content + "</td>"-->
-//                 <!--inventory += "<td>" + posts.categories + "</td>"-->
-//                 <!--inventory += "<td>" + posts.date + "</td>"-->
-//                 <!--inventory += "</tr>"-->
-//             <!--})-->
-// <!--console.log(data);-->
-// <!--//This appends the inventory html that was created to the #insertProducts table body-->
-//             <!--$("#insertProducts").append(inventory)-->
-//         <!--}-->
-
-
-    <!--})();-->
-
-    <!--function newData(){-->
-        <!--var inventory = " "-->
-        <!--var ajaxRequest = $.ajax("./data/blog.json")-->
-
-<!--//This resets the table back to the default of empty by calling its id and using the jQuery selector of .html set to an empty string. This solves the problem of the refresh button continuing to append every time it was clicked.-->
-        <!--$('#insertProducts').html("")-->
-
-        <!--ajaxRequest.done(function (data){-->
-            <!--data.forEach(function(item){-->
-            //     <!--inventory += "<tr>"-->
-            //     <!--inventory += "<td>" + item.title + "</td>"-->
-            //     <!--inventory += "<td>" + item.quantity + "</td>"-->
-            //     <!--inventory += "<td>" + item.categories + "</td>"-->
-            //     <!--inventory += "<td>" + item.price + "</td>"-->
-            //     <!--inventory += "</tr>"-->
-            // <!--})-->
-            // <!--$("#insertProducts").append(inventory)-->
-
-        <!--})-->
-    <!--}-->
-    <!--$("#refresh-btn").click(newData)-->
-
-<!--</script>-->
-
-
-
-
+<!--weather map notes-->
+    <!--var jqXhr = $.get("http://api.openweather....");-->
+         <!--APPID: from slack channel",-->
+         <!--q: "San Antonio"-->
+       <!--});-->
+       <!--jqXhr.done(function(data) {-->
+            <!--console.log(data.list[8).main;-->
+       <!--});-->
 
 
 
