--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -1,55 +1,131 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns="http://www.w3.org/1999/html">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
+<!--<title>JQuery</title>                                                           -->
+<!--</head>-->
+<!--<body>-->
+
+    <!--<h1>JQuery</h1>-->
+
+    <!--<input id="playInput"><button id="playButton">Play</button>-->
+    <!--<div id="playOutput"></div>-->
+    <!--<div>-->
+    <!--<ul>-->
+        <!--<li id="gsd">German Shepherd</li>-->
+        <!--<li id="scooby">Great Dane</li>-->
+        <!--<li id="corgi" class="codeup">Corgi</li>-->
+        <!--<li id="codeup">Ducky</li>-->
+    <!--</ul>-->
+    <!--</div>-->
+
+
+
+    <!--&lt;!&ndash;</ul>&ndash;&gt;-->
+
+    <!--<h1 class="codeup">Hello from Codeup</h1>-->
+
+    <!--<p class="codeup">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi culpa cumque cupiditate dignissimos excepturi fuga numquam, quae quam. Consectetur, consequatur explicabo ipsa itaque laborum maxime minus odit perferendis repudiandae veritatis.</p>-->
+
+    <!--<div class="codeup"></div>-->
+
+
+
+
+<!--<p class="importante">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi culpa cumque cupiditate dignissimos excepturi fuga numquam, quae quam. Consectetur, consequatur explicabo ipsa itaque laborum maxime minus odit perferendis repudiandae veritatis.-->
+    <!--<p id="double">This is a paragraph.</p>-->
+    <!--<p class="importante">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi culpa cumque cupiditate dignissimos excepturi fuga numquam, quae quam. Consectetur, consequatur explicabo ipsa itaque laborum maxime minus odit perferendis repudiandae veritatis.-->
+    <!--<p class="importante">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi culpa cumque cupiditate dignissimos excepturi fuga numquam, quae quam. Consectetur, consequatur explicabo ipsa itaque laborum maxime minus odit perferendis repudiandae veritatis.-->
+    <!--<p class="importante">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi culpa cumque cupiditate dignissimos excepturi fuga numquam, quae quam. Consectetur, consequatur explicabo ipsa itaque laborum maxime minus odit perferendis repudiandae veritatis.-->
+
+    <!--<div>-->
+    <!--<h2>What would you like to drink?</h2>-->
+    <!--<ul>-->
+        <!--<li>Coffee</li>-->
+        <!--<li>Tea</li>-->
+        <!--<li>Milk</li>-->
+    <!--</ul>-->
+    <!--</div>-->
+    <!--<p><button id="button">Click Me!</button></p>-->
+
+    <!--<script src="js/jquery-2.2.4.js"></script>-->
+    <!--<script src="js/jquery_exercises.js"></script>-->
+
+<!--</body>-->
+<!--</html>-->
+
+
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>JQuery</title>
+    <title>DOM: Query and Modify</title>
 </head>
 <body>
 
-    <h1>JQuery</h1>
+<h1 id="main-header">Hello World!</h1>
+<ul>
+    <li data-dbid="1">Item 1</li>
+    <li data-dbid="2">Item 2</li>
+    <li data-dbid="3">Item 3</li>
+    <li data-dbid="4">Item 4</li>
+    <li data-dbid="5">Item 5</li>
+</ul>
+<h2 id="sub-header">Hello Again.</h2>
+<p class="sub-paragraph">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+    aliquip ex ea commodo consequat. Duis aute irure dolor in
+    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+    culpa qui officia deserunt mollit anim id est laborum.
+</p>
 
-    <input id="playInput"><button id="playButton">Play</button>
-    <div id="playOutput"></div>
-    <div>
-    <ul>
-        <li id="gsd">German Shepherd</li>
-        <li id="scooby">Great Dane</li>
-        <li id="corgi" class="codeup">Corgi</li>
-        <li id="codeup">Ducky</li>
-    </ul>
-    </div>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, assumenda debitis fuga incidunt itaque, minus modi necessitatibus odio, officiis pariatur qui quidem recusandae sed sequi sunt suscipit temporibus ullam vitae.</p>
 
+<p>
+    Fer
+</p>
 
+<input id="name" type="password">
+<button id="btn-input">Remove Event</button>
 
-    <!--</ul>-->
-
-    <h1 class="codeup">Hello from Codeup</h1>
-
-    <p class="codeup">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi culpa cumque cupiditate dignissimos excepturi fuga numquam, quae quam. Consectetur, consequatur explicabo ipsa itaque laborum maxime minus odit perferendis repudiandae veritatis.</p>
-
-    <div class="codeup"></div>
-
-
-
-
-<p class="importante">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi culpa cumque cupiditate dignissimos excepturi fuga numquam, quae quam. Consectetur, consequatur explicabo ipsa itaque laborum maxime minus odit perferendis repudiandae veritatis.
-    <p id="double">This is a paragraph.</p>
-    <p class="importante">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi culpa cumque cupiditate dignissimos excepturi fuga numquam, quae quam. Consectetur, consequatur explicabo ipsa itaque laborum maxime minus odit perferendis repudiandae veritatis.
-    <p class="importante">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi culpa cumque cupiditate dignissimos excepturi fuga numquam, quae quam. Consectetur, consequatur explicabo ipsa itaque laborum maxime minus odit perferendis repudiandae veritatis.
-    <p class="importante">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi culpa cumque cupiditate dignissimos excepturi fuga numquam, quae quam. Consectetur, consequatur explicabo ipsa itaque laborum maxime minus odit perferendis repudiandae veritatis.
-
-    <div>
-    <h2>What would you like to drink?</h2>
-    <ul>
-        <li>Coffee</li>
-        <li>Tea</li>
-        <li>Milk</li>
-    </ul>
-    </div>
-    <p><button id="button">Click Me!</button></p>
-
-    <script src="js/jquery-2.2.4.js"></script>
-    <script src="js/jquery_exercises.js"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script>
+    (function() {
+        "use strict";
+        $('#main-header').click(function(){
+            var currentColor = $(this).css('background-color');
+            console.log(currentColor);
+            if(currentColor == 'rgb(0, 255, 255)'){
+                $(this).css('background-color', 'white');
+            }else{
+                $(this).css('background-color', 'cyan');
+            }
+        });
+        $('p').dblclick(function (){
+            $('p').css('font-size', '18px');
+        });
+        $('li').hover(function(){
+            $('li').css('color', 'red');
+        }, function(){
+            $('li').css('color', 'black');
+        });
+        // Adds a key event on the password input
+        $('#name').keyup(function(e){
+            console.log(e.key);
+            console.log(e.keyCode);
+            // If the user types f, you get an alert
+            if(e.key  === 'f'){
+                alert('That\s how my name starts!');
+            }
+        });
+        // Remove all the events from the password input
+        $('#btn-input').click(function(){
+            $('#name').off();
+        });
+    })();
+</script>
 </body>
 </html>
