added style sheet

--- a/weather_map.html
+++ b/weather_map.html
@@ -41,6 +41,7 @@
 
 <script src="js/jquery-2.2.4.js"></script>
 <script src="js/weather_map.js"></script>
+<script src="css/weather_map.csss"></script>
 <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
 
 
