--- a/map-filter-reduce.html
+++ b/map-filter-reduce.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Map Filter Exercise</title>
 </head>
 <body>
-$END$
+    <h6>Map Filter Project</h6>
+
+
+
+
+
+
+
+
+<script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+
+<script src="map-filter-reduce.js"></script>
 </body>
 </html>
