--- a/practice loops.html
+++ b/practice loops.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+
+<script type ='text/javascript'>
+
+for (let i=0; i < 10; i++);
+
+}
+
+for (let i=9; i>0~; i--){
+
+}
+</script>
+
+
 </body>
 </html>
