--- a/promises.html
+++ b/promises.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Promises</title>
 </head>
 <body>
-$END$
+
+<h3>Promises Exercises</h3>
+
+
+
+<!--didn't need jquery below in order to complete the assignment-->
+<!--<script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>-->
+
+
+<script src="js/promises.js"></script>
 </body>
 </html>
