--- a/map-filter-reduce-bonuses.html
+++ b/map-filter-reduce-bonuses.html
@@ -1,10 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+
+    <title>Map Filter Reduce</title>
+
 </head>
 <body>
-$END$
+
+<main class="container">
+
+    <h1>Map, Filter, Reduce</h1>
+
+</main>
+
+<!-- jQuery Version 2.2.4 -->
+<script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+
+
+<!-- Custom JS -->
+<script>
+
+    {
+        "use strict";
+
+        const fruits = ["cantaloupe", "orange", "date", "elderberry", "ugli fruit", "pineapple"];
+
+        const customers = [
+            {
+                name: "Fred",
+                age: 58,
+                occupation: "Police Officer",
+                noOfPurchases: 4
+            },
+            {
+                name: "Samantha",
+                age: 54,
+                occupation: "Teacher",
+                noOfPurchases: 18
+            },
+            {
+                name: "Charles",
+                age: 38,
+                occupation: "Librarian",
+                noOfPurchases: 9
+            }
+        ];
+
+        const pets = [
+            {
+                name: 'Bud',
+                age: 2,
+                breed: 'Pug'
+            },
+            {
+                name: 'Gabby',
+                age: 10,
+                breed: 'Retriever'
+            },
+            {
+                name: 'Fred',
+                age: 1,
+                breed: 'Lab'
+            },
+            {
+                name: 'Bowser',
+                age: 2,
+                breed: 'Pug'
+            }
+        ];
+
+        const family = [
+            {
+                name: "Pam",
+                gender: "female",
+                age: 29,
+            },
+            {
+                name: "Amelie",
+                gender: "female",
+                age: 10,
+            },
+            {
+                name: "Justin",
+                gender: "male",
+                age: 32,
+            },
+        ];
+
+        // PROBLEM 1 - create an array of the first letters of each fruit
+
+        // let lang = users.filter(user => user.languages.length >=3);
+        // console.log('lang', lang);
+
+
+
+
+        // let reduceItems = fruits.reduce((accumulation, currfruit) => accumulation + currfruit[0],[]);
+        // console.log('first', reduceItems);
+
+
+        let fruit = fruits.map(fruit => fruit.charAt(0));
+        console.log(fruit);
+        //the accumulation is acknowledging the fruits.  when you add + currfruit you are telling it to pick the first letter in the string; the empty [] is picking the last letter.
+
+        // PROBLEM 2 - create array of user objects based on the customers array
+        // of objects (each user object should just have name and age properties)
+
+        // let email = users.map(user => user.email);
+        // console.log('em', email);
+
+        const users = customers.map(({name, age}) => {return {name, age} })
+        console.log(users);
+
+
+        // PROBLEM 3 use Filter - create an array of civil servant customers (teachers and police officers)
+        // containing the same properties as the objects on the customers objects
+        const civilServ = customers.filter((element) => {
+            console.log(element.occupation.toLowerCase());
+            return element.occupation.toLowerCase()==='police officer' || element.occupation.toLowerCase() ==='teacher';
+        });
+        console.log(civilServ);
+
+            // let teach, pol = customers.filter(customer => customer.occupation ||
+            //
+            // let civilServ = customers.filter(customer => customer.occupation())
+
+
+            // PROBLEM 4 - (use reduce & destructing) determine the average age of customers
+
+        const custAge = customers.reduce((total, { age }) => {
+            return total + age;
+    }, 0) / customers.length;
+        console.log(custAge);
+
+            // PROBLEM 5 - (use reduce) create a function makeSuperPet() that takes in the pets array as input and returns a single pet object
+            // with the following shape...
+            /*
+
+            {
+                name: ALL_PET_NAMES_CONCATENATED_INTO_A_SINGLE_STRING,
+                age: THE_TOTAL_OF_ALL_PET_AGES,
+                breed: THE_FIRST_LETTERS_OF_ALL_PET_BREEDS_CONCATENATATED_INTO_A_SINGLE_STRING
+            }
+
+         */
+           const makeSuperPet = (arr) => {
+               return arr.reduce((accum, curr) => {
+                   accum.name += curr.name;
+                   accum.age += curr.age;
+                   accum.breed += curr.breed[0];
+                   return accum;
+               }, {name: '', age: 0, breed: ''});
+           };
+           console.log(makeSuperPet(pets));
+
+
+            // PROBLEM 6 - take in an array of pets and return an array of the length of first names for pugs only
+            // your output for the given input should be [3, 6] for 'Bud' and 'Bowser'
+            const lengthNam = (dogs) => {
+                return dogs.filter(dog => dog.breed.toLowerCase() === 'pug').map(dog => dog.name.length);
+            };
+            console.log(lengthNam(pets));
+
+            // PROBLEM 7 - create a function getFemaleFamilyMembers() that when given the family variable as an argument,
+            // returns an array of female family member names
+            const getFemaleFamilyMembers = (fam) => {
+                return fam.filter((person) => {
+                    return person.gender === 'female'
+                }).map(person => person.name);
+            };
+            console.log(getFemaleFamilyMembers(family));
+
+            // PROBLEM 8 - create a function makeLongPetString() that when given the variable of pets,
+            // returns a string of all property values with dashes separating each property value
+            const makeLongPetString = animals => animals.reduce((accum, curr) => accum += curr.name, "");
+            console.log(makeLongPetString(pets));
+
+            // PROBLEM 9 - create a function that when given an array of first names, returns an array of the same names with a last name of Smith
+
+            // input = ['Sally', 'Fred', 'Steve']
+            // output = ['Sally Smith', 'Fred Smith', 'Steve']
+
+
+            // PROBLEM 10 - create a function that when given an array of numbers, return the sum of even numbers
+
+            // PROBLEM 11 - create a function that when given an array of numbers, return the sum of all numbers evenly divisible by 10
+
+            // PROBLEM 12 - create a function that when given an array of names, return a string of all the first letters of each name
+
+            // PROBLEM 13 - create a function that when given an array of values, returns an array of only the truthy values
+
+            // PROBLEM 14 - create a function that when given an object, returns the property values as an array of elements
+
+            // PROBLEM 15 - create a function that when given an object, returns the property values as an array of elements
+
+            // PROBLEM 16 - create a function that when given three arguments: a min num, a max num, an array
+            // of nums will return the array of nums that are only between the min and max values, inclusive
+
+            // PROBLEM 17 - create a function that when given an array of strings, returns an array of objects
+            // with properties for the given string value and the length of the string and the string without vowels (not including y)
+
+        }
+
+</script>
+
 </body>
 </html>
